# SimpleKernel

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README_ENG.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  help.md
.github/workflows/: dev-image.yml  workflow.yml
3rd/MPMCQueue/: CMakeLists.txt  CMakePresets.json  README.md
3rd/MPMCQueue/test/: CMakeLists.txt  test.cpp
cmake/: 3rd.cmake  compile_config.cmake  functions.cmake  project_config.cmake  riscv64-gcc.cmake  x86_64-gcc.cmake
docs/: 0_工具链.md  1_系统启动.md  2_调试输出.md  3_中断.md  CMakeLists.txt  coding_standards.md  docker.md  git_commit.md
src/: CMakeLists.txt  io_buffer.cpp  main.cpp  project_config.h  syscall.cpp
src/arch/: AGENTS.md  CMakeLists.txt  README.md  arch.h
src/arch/aarch64/: arch_main.cpp  backtrace.cpp  boot.S  early_console.cpp  interrupt.S  interrupt.cpp  interrupt_main.cpp  link.ld  macro.S  switch.S  syscall.cpp  timer.cpp
src/arch/aarch64/gic/: CMakeLists.txt  README.md  gic.cpp
src/arch/aarch64/gic/include/: gic.h
src/arch/aarch64/include/: interrupt.h  pl011_singleton.h
src/arch/riscv64/: arch_main.cpp  backtrace.cpp  boot.S  early_console.cpp  interrupt.S  interrupt.cpp  interrupt_main.cpp  link.ld  macro.S  switch.S  syscall.cpp  timer.cpp
src/arch/riscv64/include/: interrupt.h
src/arch/riscv64/plic/: CMakeLists.txt  README.md  plic.cpp
src/arch/riscv64/plic/include/: plic.h
src/arch/x86_64/: arch_main.cpp  backtrace.cpp  early_console.cpp  interrupt.cpp  interrupt_main.cpp  macro.S  syscall.cpp  timer.cpp
src/arch/x86_64/apic/: CMakeLists.txt  README.md  apic.cpp  io_apic.cpp  local_apic.cpp
src/arch/x86_64/apic/include/: apic.h  io_apic.h  local_apic.h
src/arch/x86_64/include/: interrupt.h  sipi.h
src/device/: AGENTS.md  CMakeLists.txt  device.cpp  device_manager.cpp
src/device/acpi/: CMakeLists.txt  acpi.hpp  acpi_driver.hpp
src/device/include/: device_manager.hpp  device_node.hpp  driver_registry.hpp  platform_bus.hpp
src/device/ns16550a/: CMakeLists.txt  ns16550a.hpp  ns16550a_driver.hpp
src/device/pl011/: CMakeLists.txt  pl011.hpp  pl011_driver.hpp
src/device/virtio/: CMakeLists.txt  defs.h  virtio_driver.cpp  virtio_driver.hpp
src/device/virtio/device/: device_initializer.hpp
src/device/virtio/device/blk/: virtio_blk.hpp  virtio_blk_defs.h  virtio_blk_vfs_adapter.hpp
src/device/virtio/device/net/: virtio_net.h
src/device/virtio/transport/: mmio.hpp  pci.hpp  transport.hpp
src/device/virtio/virt_queue/: misc.hpp  split.hpp  virtqueue_base.hpp
src/filesystem/: AGENTS.md  CMakeLists.txt  file_descriptor.cpp  filesystem.cpp
src/filesystem/fatfs/: CMakeLists.txt  diskio.cpp  fatfs.cpp
src/filesystem/fatfs/include/: fatfs.hpp  ffconf.h
src/filesystem/include/: file_descriptor.hpp
src/filesystem/ramfs/: CMakeLists.txt  ramfs.cpp
src/filesystem/ramfs/include/: ramfs.hpp
src/filesystem/vfs/: CMakeLists.txt  close.cpp  lookup.cpp  mkdir.cpp  mount.cpp  open.cpp  read.cpp  readdir.cpp  rmdir.cpp  seek.cpp  unlink.cpp  vfs.cpp  vfs_internal.hpp  write.cpp
src/filesystem/vfs/include/: block_device.hpp  filesystem.hpp  mount.hpp  vfs.hpp  vfs_types.hpp
src/include/: basic_info.hpp  expected.hpp  interrupt_base.h  io_buffer.hpp  kernel.h  kernel_config.hpp  kernel_elf.hpp  kernel_fdt.hpp  kernel_log.hpp  mmio_accessor.hpp  mutex.hpp  panic_observer.hpp  per_cpu.hpp  signal.hpp  spinlock.hpp  syscall.hpp  tick_observer.hpp
src/libc/: CMakeLists.txt  sk_stdlib.c  sk_string.c
src/libc/include/: math.h  sk_ctype.h  sk_stdio.h  sk_stdlib.h  sk_string.h
src/libcxx/: CMakeLists.txt  kstd_libcxx.cpp  kstd_new.cpp
src/libcxx/include/: kstd_cstdio  kstd_cstring  kstd_libcxx.h  kstd_memory
src/memory/: CMakeLists.txt  memory.cpp  virtual_memory.cpp
src/memory/include/: virtual_memory.hpp
src/task/: AGENTS.md  CMakeLists.txt  block.cpp  clone.cpp  exit.cpp  mutex.cpp  schedule.cpp  signal.cpp  sleep.cpp  task_control_block.cpp  task_manager.cpp  tick_update.cpp  wait.cpp  wakeup.cpp
src/task/include/: cfs_scheduler.hpp  fifo_scheduler.hpp  idle_scheduler.hpp  lifecycle_messages.hpp  resource_id.hpp  rr_scheduler.hpp  scheduler_base.hpp  task_control_block.hpp  task_fsm.hpp  task_manager.hpp  task_messages.hpp
tests/: AGENTS.md
tests/integration_test/: CMakeLists.txt
tests/integration_test/aarch64_minimal/: main.cpp
tests/integration_test/opensbi_test/: CMakeLists.txt  main.cpp
tests/system_test/: CMakeLists.txt  affinity_test.cpp  balance_test.cpp  cfs_scheduler_test.cpp  clone_system_test.cpp  clone_test.cpp  cross_core_test.cpp  ctor_dtor_test.cpp  exit_system_test.cpp  exit_test.cpp  fatfs_system_test.cpp  fatfs_test.cpp  fifo_scheduler_test.cpp  fork_test.cpp  idle_scheduler_test.cpp  interrupt_test.cpp  kernel_task_test.cpp  main.cpp  memory_test.cpp  mutex_test.cpp  ramfs_system_test.cpp  ramfs_test.cpp  rr_scheduler_test.cpp  signal_test.cpp  spinlock_test.cpp  stress_test.cpp  system_test.h  thread_group_system_test.cpp  thread_group_test.cpp  tick_test.cpp  user_task_test.cpp  virtual_memory_test.cpp  wait_system_test.cpp  wait_test.cpp  yield_test.cpp  zombie_reap_test.cpp
tests/unit_test/: CMakeLists.txt  README.md  balance_test.cpp  cfs_scheduler_test.cpp  dma_region_test.cpp  fifo_scheduler_test.cpp  kernel_elf_test.cpp  kernel_fdt_test.cpp  ramfs_test.cpp  rr_scheduler_test.cpp  sk_libc_test.cpp  sk_string_test.cpp  sk_unique_ptr_test.cpp  spinlock_test.cpp  vfs_test.cpp  virtio_driver_test.cpp  virtual_memory_test.cpp
tests/unit_test/mocks/: arch.cpp  cpu_io.h  io_buffer_mock.cpp
tests/unit_test/task/fixtures/: task_test_harness.cpp
tools/: .pre-commit-config.yaml.in  Dockerfile  README.md  aarch64_boot_scr.txt
